tests/ui/error-codes/E0614.rs
fn main() {
    let y = 0u32;
    *y; //~ ERROR E0614
}
